# parasync

./: CNAME  LICENSE  README.md  index.html  notes.md  package-lock.json  package.json  privacy.md  sample-config.yaml  vite.config.ts
.github/workflows/: binaries.yml  deploy.yml  publish.yml
public/: sample-config.yaml
src/: App.module.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  README-saf.md  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_saf.rs  audio.rs  audio_commands.rs  audio_service.rs  downloads_commands.rs  downloads_service.rs  file_service.rs  lib.rs  main.rs  saf_commands.rs  saf_service.rs  songs_commands.rs  songs_service.rs
src/components/APIConfig/: APIConfig.module.css  APIConfig.tsx
src/components/DownloadCard/: DownloadCard.tsx
src/components/GameLoader/: GameLoader.module.css  GameLoader.tsx
src/components/SmallCover/: SmallCover.module.css  SmallCover.tsx
src/components/SongBrowser/: SongBrowser.module.css  SongBrowser.tsx
src/components/SongCard/: SongCard.tsx
src/components/hooks/: useStaticHandler.ts
src/context/: SongsContext.tsx
src/game/: config.ts  engine.ts  resources.ts
src/game/actors/: Button.ts  CoverBg.ts  Divider.ts  Highway.ts  InstrumentRailBorder.ts  NotesBatch.ts  ProgressBar.ts
src/game/actors/Notes/: BaseNote.ts  DividerNote.ts
src/game/helpers/: apiService.ts  filesLoader.ts  imageEffects.ts  loaders.ts  songLoader.ts  songProcess.ts  transparentLoader.ts  zipHandler.ts  zipSongLoader.ts
src/game/scenes/: MainScene.ts
src/hooks/: useDownloads.ts  useKeepAwake.ts  useLocalSongs.ts  useLocalStorage.ts  useMarquee.ts  useSongsPath.ts  useStaticHandler.ts
src/pages/AboutPage/: AboutPage.tsx
src/pages/AudioDebugPage/: AudioDebugPage.tsx
src/pages/DownloadsPage/: DownloadsPage.tsx
src/pages/HomePage/: HomePage.tsx
src/pages/Layout/: Layout.tsx
src/pages/MySongs/: MySongs.tsx
src/pages/MySongsPage/: MySongsPage.tsx
src/pages/NotFoundPage/: NotFoundPage.tsx
src/pages/PlayerPage/: PlayerPage.tsx
src/pages/SettingsPage/: SettingsPage.tsx
src/pages/SongsPage/: SongsPage.tsx
src/types/: api.ts  custom.d.ts  icon.ts  routes.ts  songs.ts
src/utils/: api.ts  audio.ts  downloads.ts  fs.ts  icons.tsx  mobile.ts  routes.ts  saf.ts  sampleapi.ts  songs.ts
