[package]
name = "parasync"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "parasync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
rodio = "0.17"
cpal = "0.15"
once_cell = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Android specific linker configuration
[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"

# Android specific build configuration
[target.aarch64-linux-android]
linker = "aarch64-linux-android28-clang"

[target.armv7-linux-androideabi]
linker = "armv7a-linux-androideabi28-clang"

